[package]
name = "terrars-andrewbaxter-dinker"
edition = "2021"
version = "0.1.1"
description = "Pre-generated Terrars Dinker bindings"
readme = "readme.md"
license = "ISC"
repository = "https://github.com/andrewbaxter/terrars-andrewbaxter-dinker"

[dependencies]
serde = "1.0.151"
serde_json = "1.0.91"
terrars = "*"

[features]
image = []
