[package]
name = "terrars-andrewbaxter-dinker"
edition = "2021"
version = "0.1.10"
description = "Pre-generated Terrars Dinker bindings"
readme = "readme.md"
license = "ISC"
repository = "https://github.com/andrewbaxter/terrars-andrewbaxter-dinker"

[dependencies]
serde = "1.0.152"
serde_json = "1.0.91"
terrars = "0.1.1"

[features]
image = []
