[package]
name = "terrars-andrewbaxter-dinker"
edition = "2021"
version = "0.1.21"
description = "Pre-generated Terrars Dinker bindings"
readme = "readme.md"
license = "ISC"
repository = "https://github.com/andrewbaxter/terrars-andrewbaxter-dinker"

[dependencies]
serde = "1"
serde_json = "1"
terrars = "0.1"

[features]
image = []
